--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,12 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="Button_Large_Black" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/btn_bg_black</item>
+        <item name="android:paddingTop">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
 </resources>
