--- a/app/src/main/res/drawable/btn_bg_orange.xml
+++ b/app/src/main/res/drawable/btn_bg_orange.xml
@@ -2,12 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
+            <corners android:radius="4dp" />
             <solid android:color="#e29c88"></solid>
         </shape>
 
     </item>
     <item>
         <shape>
+            <corners android:radius="4dp" />
             <solid android:color="#DC3F13"></solid>
         </shape>
     </item>
